--- a/front/login.html
+++ b/front/login.html
@@ -17,9 +17,19 @@
       <h1 class="login__title">Авторизация</h1>
       <form class="login__from">
         <h3 class="login__email-title">Электронная почта</h3>
-        <input type="email" placeholder="Введите почту" name="email" class="login__email-input"></input>
+        <input
+          type="email"
+          placeholder="Введите почту"
+          name="email"
+          class="login__email-input"
+        />
         <h3 class="login__password-title">Пароль</h3>
-        <input type="password" placeholder="Введите пароль" name="password" class="login__password-input"></input>
+        <input
+          type="password"
+          placeholder="Введите пароль"
+          name="password"
+          class="login__password-input"
+        />
         <button class="login__sign-in">Войти</button>
       </form>
       <div class="login__reg">
